# IndoorNavigationSystemAutoware

./: .gitignore  README.md
autoware/map/: lanelet2_map.osm
autoware/src/parking_assistant_pkg/: package.xml  setup.cfg  setup.py
autoware/src/parking_assistant_pkg/launch/: parking_assistant.launch.py
autoware/src/parking_assistant_pkg/parking_assistant_pkg/: parking_assistant_node.py
autoware/src/parking_assistant_pkg/src/parking_assistant_pkg/: parking_assistant_node.py
ros2_ws/src/: README.md  parking_management.sh
ros2_ws/src/parking_system/: CMakeLists.txt  package.xml  setup.py  web_viz.launch.xml
ros2_ws/src/parking_system/launch/: parking_simulation.launch.py
ros2_ws/src/parking_system/msg/: ParkingStatusArray.msg
ros2_ws/src/parking_system/parking_system/: advanced_tkinter_gui.py  integrated_dashboard_node.py  websocket_bridge.py
ros2_ws/src/parking_system/srv/: BookSpot.srv
ros2_ws/src/parking_system/web/: dashboard.html
ros2_ws/src/parking_system_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/parking_system_interfaces/msg/: ParkingStatusArray.msg
ros2_ws/src/parking_system_interfaces/srv/: BookTimeSlot.srv
src/parking_system/: setup.py
src/parking_system/msg/: ParkingSpot.msg
src/parking_system/parking_system/: integrated_dashboard_node.py  parking_management_node.py
src/parking_system/web/: dashboard.html  web_server.py
src/parking_system_interfaces/: CMakeLists.txt  package.xml
